<resources>
    <string name="app_name">pdf_project</string>
    <string name="Services">Services</string>
    <string name="Planning">Planning</string>
    <string name="Map">Map</string>
    <string name="Spectacle">Spectacle</string>
    <string name="Partage">Partage</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string-array name="items">
        <item>Home</item>
        <item>Resto / Boutiques</item>
        <item>Planning</item>
        <item>Map</item>
        <item>Spectacles</item>
        <item>Partage</item>
    </string-array>

    <string name="ouverture">Open</string>
    <string name="fermeture">Close</string>
    <string name="titre"></string>
    <string name="titre_apres_ouverture">Menu</string>
    <string name="title_activity_map">Map</string>
</resources>
